--- a/activity-2/activity2.html
+++ b/activity-2/activity2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="author" content="karthik" />
     <meta name="description" content="showing how to use script tag" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+    Activity - 2 
     <script type="text/javascript">
         let d=new Date();
         alert("Today's date is "+d);
